// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/timeline/demo/alternate.md correctly 1`] = `
<ul
  class="ant-timeline ant-timeline-alternate"
>
  <li
    class="ant-timeline-item ant-timeline-item-left"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-green"
    />
    <div
      class="ant-timeline-item-content"
    >
      Solve initial network problems 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-left"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <i
        class="anticon anticon-clock-circle-o"
        style="font-size:16px"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="clock-circle"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </i>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-red"
    />
    <div
      class="ant-timeline-item-content"
    >
      Network problems being solved 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-left"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
    >
      <i
        class="anticon anticon-clock-circle-o"
        style="font-size:16px"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="clock-circle"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </i>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      Technical testing 2015-09-01
    </div>
  </li>
</ul>
`;

exports[`renders ./components/timeline/demo/basic.md correctly 1`] = `
<ul
  class="ant-timeline"
>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      Solve initial network problems 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      Technical testing 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      Network problems being solved 2015-09-01
    </div>
  </li>
</ul>
`;

exports[`renders ./components/timeline/demo/color.md correctly 1`] = `
<ul
  class="ant-timeline"
>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-green"
    />
    <div
      class="ant-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-green"
    />
    <div
      class="ant-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-red"
    />
    <div
      class="ant-timeline-item-content"
    >
      <p>
        Solve initial network problems 1
      </p>
      <p>
        Solve initial network problems 2
      </p>
      <p>
        Solve initial network problems 3 2015-09-01
      </p>
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      <p>
        Technical testing 1
      </p>
      <p>
        Technical testing 2
      </p>
      <p>
        Technical testing 3 2015-09-01
      </p>
    </div>
  </li>
</ul>
`;

exports[`renders ./components/timeline/demo/custom.md correctly 1`] = `
<ul
  class="ant-timeline"
>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      Solve initial network problems 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <i
        class="anticon anticon-clock-circle-o"
        style="font-size:16px"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="clock-circle"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </i>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      Technical testing 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      Network problems being solved 2015-09-01
    </div>
  </li>
</ul>
`;

exports[`renders ./components/timeline/demo/pending.md correctly 1`] = `
<div>
  <ul
    class="ant-timeline ant-timeline-pending"
  >
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-blue"
      />
      <div
        class="ant-timeline-item-content"
      >
        Create a services site 2015-09-01
      </div>
    </li>
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-blue"
      />
      <div
        class="ant-timeline-item-content"
      >
        Solve initial network problems 2015-09-01
      </div>
    </li>
    <li
      class="ant-timeline-item ant-timeline-item-last"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-blue"
      />
      <div
        class="ant-timeline-item-content"
      >
        Technical testing 2015-09-01
      </div>
    </li>
    <li
      class="ant-timeline-item ant-timeline-item-pending"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-blue"
      >
        <i
          class="anticon anticon-loading"
        >
          <svg
            aria-hidden="true"
            class="anticon-spin"
            data-icon="loading"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3-22.2-52.4-53.9-99.4-94.3-139.9-40.4-40.4-87.5-72.2-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
            />
          </svg>
        </i>
      </div>
      <div
        class="ant-timeline-item-content"
      >
        Recording...
      </div>
    </li>
  </ul>
  <button
    class="ant-btn ant-btn-primary"
    style="margin-top:16px"
    type="button"
  >
    <span>
      Toggle Reverse
    </span>
  </button>
</div>
`;

exports[`renders ./components/timeline/demo/right.md correctly 1`] = `
<ul
  class="ant-timeline ant-timeline-right"
>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      Solve initial network problems 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-custom ant-timeline-item-head-red"
    >
      <i
        class="anticon anticon-clock-circle-o"
        style="font-size:16px"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="clock-circle"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </i>
    </div>
    <div
      class="ant-timeline-item-content"
    >
      Technical testing 2015-09-01
    </div>
  </li>
  <li
    class="ant-timeline-item ant-timeline-item-last ant-timeline-item-right"
  >
    <div
      class="ant-timeline-item-tail"
    />
    <div
      class="ant-timeline-item-head ant-timeline-item-head-blue"
    />
    <div
      class="ant-timeline-item-content"
    >
      Network problems being solved 2015-09-01
    </div>
  </li>
</ul>
`;
